# thermostat_project

./: CMakeLists.txt  Cooler.hpp  Heater.hpp  README.md  Room.cpp  Room.hpp  Thermostat.hpp  ThermostatApp.drawio  testThermostat.cpp
apps/: CMakeLists.txt  ThermostatApp.cpp
docs/: ThermostatAppClassDiagram.drawio
include/: Config.hpp
include/Device/: Device.hpp
include/RoomApp/: RoomApp.hpp
include/Thermostat/: Thermostat.hpp
src/: CMakeLists.txt
src/Cooler/: CMakeLists.txt  Cooler.cpp
src/Device/: CMakeLists.txt  Device.cpp
src/Heater/: CMakeLists.txt  Heater.cpp
src/Room/: CMakeLists.txt  Room.cpp
src/RoomApp/: CMakeLists.txt  RoomApp.cpp
src/Thermostat/: CMakeLists.txt  Thermostat.cpp
tests/: CMakeLists.txt  testThermostat.cpp
tests/include/: testThermostat.hpp
tests/testMock/: CMakeLists.txt  testMock.cpp
tests/testParameterized/: CMakeLists.txt  testParameterized.cpp
tests/testRunTimeErrors/: CMakeLists.txt  testRunTimeErrors.cpp
